just added some inline and functional commenting to the .py files

--- a/ems/templates/auth/register.html
+++ b/ems/templates/auth/register.html
@@ -82,7 +82,7 @@
 
         <footer class="footer container container-2">
             <div class="row">
-                <p class="col-sm-7">Copyright 2021 Simply Amazed Co.</p>
+                <p class="col-sm-7">Copyright 2024, E-mobile Solutions</p>
             </div>
         </footer>
     </div>
