--- a/ems/templates/auth/login.html
+++ b/ems/templates/auth/login.html
@@ -93,7 +93,7 @@
 
         <footer class="footer container container-2">
             <div class="row">
-                <p class="col-sm-7">Copyright 2021 Simply Amazed Co.</p>
+                <p class="col-sm-7">Copyright 2024, E-mobile Solutions</p>
             </div>
         </footer>
     </div>
